<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bx.android.NotificationsExampleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/simpleNotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_notification" />

        <Button
            android:id="@+id/buttonsNotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications_button" />

        <Button
            android:id="@+id/flagsNotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flags_notification" />

        <Button
            android:id="@+id/pendingIntentNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_pending" />

        <Button
            android:id="@+id/notificationWithService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_notiication" />

    </LinearLayout>

</ScrollView>
